# zj-58

./: CMakeLists.txt  LICENSE  Makefile  README.md  ZJ-58.ppd  gv2_thermal_printer_config.py  install  rastertozj  rastertozj.c  zj-58.drv  zj-80.drv  zj-ru.po  zj.drv  zj58.ppd  zj80.ppd  zjdrv.drv
.github/workflows/: release.yaml
ci/: nfpm.yaml
extras/: camera.sh
ppd/: zj58.ppd  zj80.ppd
